--- a/app/assets/stylesheets/bootstrap_and_customization.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_customization.css.scss
@@ -1,1 +1,7 @@
+$body-bg: #3498db;
+$navbar-inverse-bg: #27ae60;
+$navbar-inverse-link-color: white;
+$brand-primary: #16a085;
+$jumbotron-bg: #ecf0f1;
+
 @import 'bootstrap';
