--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,19 +2,22 @@
 <html>
   <head>
     <title>Pinteresting</title>
-    <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= csrf_meta_tags %>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 <body>
 
-
-    <%= render 'layouts/header' %>
-		
+    <%= render 'layouts/header' %>		
     <div class="container">
+      <% flash.each do |name, msg| %>
+        <%= content_tag(:div, msg, class: "alert alert-#{name}") %>
+        
+      <% end %>
     	<%= yield %>
-    	
+    </div>
+
   </body>
 </html>
