--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -28,7 +28,14 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
   <li><%= link_to "home", root_path %></li>
-  <li><%= link_to "about", about_path %></li>    
+  <li><%= link_to "about", about_path %></li>
+
+  <% if user_signed_in? %>
+    <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
+  <% else %>
+    <li><%= link_to "Sign In", new_user_session_path %></li>
+  <% end %>
+  
           </ul>
         </li>
       </ul>
