--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -6,8 +6,11 @@
   <thead>
     <tr>
       <th>Description</th>
+      <th>Image</th>
       <th>User</th>
-      <th colspan="3"></th>
+      <th></th>
+      <th></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -15,11 +18,12 @@
     <% @pins.each do |pin| %>
       <tr>
         <td><%= pin.description %></td>
+        <td><%= image_tag pin.image.url(:medium) %></td>
         <td><%= pin.user.email if pin.user %></td>
         <td><%= link_to 'Show', pin_path(pin) %></td>
         <% if pin.user == current_user %>
          <td><%= link_to 'Edit', edit_pin_path(pin) %></td>
-          <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+         <td><%= link_to 'Destroy', pin, method: :delete, data: { confirm: 'Are you sure?' } %></td>
         <% end %>
       </tr>
     <% end %>
@@ -28,5 +32,5 @@
 
 <br>
 <% if user_signed_in? %>
-<%= link_to 'New Pin', new_pin_path %>
+  <%= link_to 'New Pin', new_pin_path %>
 <% end %>
