--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,12 +13,7 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Link</a></li>
-          </ul>
-        </li>
-      </ul>
+      
       <form class="navbar-form navbar-left">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
@@ -26,12 +21,15 @@
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
-  <li><%= link_to "home", root_path %></li>
-  <li><%= link_to "about", about_path %></li>
+  <li><%= link_to "Home", root_path %></li>
+  <li><%= link_to "About", about_path %></li>
 
   <% if user_signed_in? %>
-    <li> <%= link_to 'New Pin', new_pin_path %></li>
+  <li>
+     <%= link_to new_pin_path do %>
+         <span class="glyphicon glyphicon-plus"></span> New Pin
+      <% end %>
+  </li>
     <li><%= link_to "Log out", destroy_user_session_path, method: :delete %></li>
   <% else %>
     <li><%= link_to "Sign In", new_user_session_path %></li>
