--- a/app/views/pins/index.html.erb
+++ b/app/views/pins/index.html.erb
@@ -25,3 +25,9 @@
       </div>
   <% end %>
 </div>
+
+<div class="center">
+   <%= will_paginate @pins, renderer: BootstrapPagination::Rails %>
+</div>
+
+
